Add remote benchmark support via SSH
- benchmark defaults to running on Mac Mini (afuera@Afueras-Mac-Mini.local)
- --local flag restores local execution
- benchmark.edn configures remote host, paths, num-workers
- SSH ControlMaster for connection multiplexing (~640 connections/benchmark)
- Battle files written via stdin pipe, results captured from stdout
- APFS clones created on remote machine for parallel workers
- Bot jar SCP'd to remote after local build
- deploy-jar!, build-and-deploy!, ensure-robocode-copy! accept ctx
- benchmark-parallel! stays local-only for now